# api/src/user/user.controller.ts
@@ -1,19 +1,34 @@
-import { Body, Controller, Post, ValidationPipe } from '@nestjs/common';
+import {
+  Body,
+  Controller,
+  Get,
+  Post,
+  ValidationPipe,
+  UseGuards,
+  Request,
+} from '@nestjs/common';
 import { ApiOperation } from '@nestjs/swagger';
 import { UserLoginDto, UserSignupDto } from './user.dto';
 import { UserService } from './user.service';
+import { AuthGuard } from '@nestjs/passport';
 
-@Controller('user')
+@Controller('users')
 export class UserController {
   constructor(private readonly userService: UserService) {}
+
+  @Get()
+  @UseGuards(AuthGuard('bearer'))
+  async show(@Request() req) {
+    return await this.userService.show(req.user);
+  }
 
   @Post('/signup')
   @ApiOperation({
     operationId: 'example signup api',
     description: 'signup api',
   })
-  signup(@Body(new ValidationPipe()) body: UserSignupDto) {
-    return this.userService.signup(body);
+  async signup(@Body(new ValidationPipe()) body: UserSignupDto) {
+    return await this.userService.signup(body);
   }
 
   @Post('/login')
@@ -21,7 +36,7 @@ export class UserController {
     operationId: 'example login api',
     description: 'login api',
   })
-  login(@Body(new ValidationPipe()) body: UserLoginDto) {
-    return this.userService.login(body);
+  async login(@Body(new ValidationPipe()) body: UserLoginDto) {
+    return await this.userService.login(body);
   }
 }
